End project & add 3_state_checkbox

--- a/src/components/UI/MyButton/MyButton.module.css
+++ b/src/components/UI/MyButton/MyButton.module.css
@@ -4,3 +4,9 @@
     cursor: pointer;
     color: seagreen;
 }
+
+.current{
+    background-color: seagreen;
+    color: white;
+    /*border: 2px goldenrod solid;*/
+}
