--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,11 +6,15 @@
 
 #root{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+
 }
 
 .App{
     width: 800px;
+    margin: 0 auto;
 }
 
 .post{
@@ -20,4 +24,36 @@
     align-items: center;
     border: 2px brown solid;
     margin-top: 15px;
+}
+
+.post-enter {
+    transform: translateX(-350px);
+}
+.post-enter-active {
+    transform: translateX(0);
+    transition: all 500ms ease-in;
+}
+.post-exit {
+    opacity: 1;
+}
+.post-exit-active {
+    transform: translateX(-350px);
+    transition: all 500ms ease-in;
+}
+
+.navbar{
+    padding: 10px;
+    height: 50px;
+    /*width: 100vw;*/
+    background-color: #574556;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-links > a{
+    text-transform: uppercase;
+    margin-right: 10px;
+    color: #62ff00;
+    text-decoration: none;
 }
